works, but alloc still increases with dataSize